# Processor

./: .gitignore  MakeStringFunc.cpp  Processor.cpp  Processor.h  README.md  StackFunc.cpp
Assembler/: CMakeLists.txt
Assembler/include/: Assembler.h
Assembler/src/: Assembler.cpp  AssemblerFunc.cpp
CodeFiles/: ATTENTION.txt  Disasm.txt  Disassm.txt  DiscrTest.txt  Fibonacci.txt  JmpCompareTest.txt  JmpCycleTest.txt  QuadraticEquation.txt  RamTest.txt  SimpleTest.txt  Test.txt  input.txt
CodeFiles/AsmFromLanguage/: Asm.txt
CodeFiles/Tests/: DiscrTest.txt  GeneralTest.txt
CommandsTable/: CMakeLists.txt  table.cpp  table.txt
Disassembler/: CMakeLists.txt
Disassembler/include/: Disasm.h
Disassembler/src/: Disasm.cpp  DisasmFunc.cpp
GeneralInclude/: General.h  Proc_General.h  Processor.h
Processor/: CMakeLists.txt
Processor/StackLog/: Dump.txt
Processor/include/: Processor.h
Processor/src/: Processor.cpp  ProcessorFunc.cpp
RequiredPrograms/: MakeStringFunc.cpp  StackFunc.cpp
